Add pagination and filters for book views
